# surreal-mind

./: .env.example  .env.test  .gitignore  .rc-prep  20250822-junie-surrealmind-1.md  20250831-think-refactor-proposal.md  AGENTS.md  BUILDME.md  CHANGELOG.md  Cargo.toml  DATABASE.md  GEMINI.md  MCP_STATUS.md  Makefile  README.md  README_ACCURATE.md  README_INGEST.md  REMINI_HEALTH_20260217.md  TASKS-CLAUDE.md  TODO.md  WARP.md  backup_database.py  check_embeddings.py  claude_desktop_config.json  claude_desktop_config.json.template  cleanup_duplicates.py  cleanup_pony_duplicates.sh  clippy_out.txt  debug_search.sh  debug_search_low_thresh.sh  deletion_plan.json  download_bge.py  extraction_request.json  history.txt  import_skater_requests.py  ingest_20250908T021008Z.json  insert.txt  investigate_duplicates.py  librust_out.rlib  photography-split-plan.md  (+16 more)
.agent/rules/: brain-file.md  legacymind-think.md
.agent/workflows/: update_documentation.md
.aiassistant/rules/: SurrealMindRules.md
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/instructions/: vibe.instructions.md
.github/workflows/: agent-pr-guard.yml  ci.yml  claude.yml  ingest-docs.yml  rust.yml
.junie/: guidelines.md
.serena/: project.yml
.serena/memories/: code_conventions.md  code_structure.md  project_overview.md  suggested_commands.md  task_completion.md
backlog/: config.yml
backlog/active/: task-39 - Fix-Hermes-3-tool-use-protocol.md
backlog/completed/: doc-6 - Test-Execution-Log-kg_populate-binary.md  doc-9 - Codex-review-—-kg_embed-binary.md  task-11 - Build-wander-Interactive-knowledge-graph-exploration-tool.md  task-14 - Fix-legacymind_think-memory-injection-content-not-returned.md  task-16 - Extract-Mode-Router-from-thinking.rs.md  task-18 - Extract-Runners-from-thinking.rs.md  task-19 - Extract-Continuity-Resolution-from-thinking.rs.md  task-26 - Finalize-thinking.rs-entry-point.md  task-31 - Add-wander-tool-guidance-and-descriptive-metadata.md  task-32 - Run-Ministral-3B-via-mistralrs.md  task-33 - Fix-call_gem-delegate_gemini-job-execution-reliability.md  task-34 - Fix-call_cancel-to-actually-stop-running-delegate-jobs.md  task-40 - Remove-scalpel-tool-and-local-delegation.md
backlog/docs/: doc-1 - Codex-review.md  doc-1 - Implementation-Steps-smtop-admin-ops-revamp.md  doc-2 - CC-review-kg_populate-implementation-feasibility.md  doc-3 - Implementation-Guide-kg_populate-codebase-patterns.md  doc-4 - Implementation-Steps-fix-legacymind_search-entity-retrieval.md  doc-4 - Implementation-Steps-remove-scalpel-tool.md  doc-4 - SUMMARY-kg_populate-implementation-readiness.md  doc-5 - Testing-Plan-kg_populate-binary.md  doc-6 - Test-Execution-Log-kg_populate-binary.md  doc-7 - Codex-review-timeout-logic-implementation.md  doc-8 - Implementation-Guide-Activity-based-timeout-logic.md
docs/: 20251121-CCR.md  AGENTS.md  CLI-REFERENCE.md  DEPENDENCIES.md  LEDGER.md  MAINTENANCE.md  PHOTOGRAPHY_SCHEMA_VALIDATION.md  Photography-Database-README.md  QUICKSTART.md  SCHEMA.md  SOURCE-FILES.md  UPGRADE_SUGGESTIONS.md  chain_id_search_fix.md  dev.legacymind.remini.plist  history.txt  tasks
documentation/: DATABASE.md
fixtures/: sample_changelog.md  sample_readme.md
lib/: iv_utils.js
logs/: surrealdb.log.2026-01-10
prompts/: deepseek_config.md  junie_priority1_fixes.md  warp_kg_build.md
schemas/: kg_extraction.schema.json
scripts/: check_chain_id_usage.py  check_kg_embeddings.sh  diagnose_entity_data.py  iv_extract.js  iv_synthesize_grok.py  migrate_ui2_to_surreal.py  nightly_shift.sh  package.json  run-http.sh  run-http.sh.bak  run-stdio.sh  sm_health.sh  start_scalpel_server.sh  test-sleep-gemini.sh  test_chain_id.py  test_kg.py  validate_contacts.py  verify_ui2_import.py
src/: bge_embedder.rs  config.rs  deserializers.rs  embeddings.rs  error.rs  flavor.rs  gemini.rs  http.rs  indexes.rs  kg_extractor.rs  legacy_storage.rs  lib.rs  main.rs  main_modular.rs  main_new.rs  oauth.rs  prompt_critiques.rs  prompt_metrics.rs  prompts.rs  registry.rs  schemas.rs  serializers.rs  sessions.rs  synthesis.rs  utils.rs  workspace.rs
src/server/: db.rs  (+4 more)
tests/: brain_store_integration.rs  check_version.sh  debug_input.json  debug_search.sh  debug_search_low_thresh.sh  dimension_hygiene.rs  gemini_client_integration.rs  ingest_integration.rs  inner_voice_edge_cases.rs  inner_voice_providers_gate.rs  inner_voice_retrieve.rs  kg_debug_test.rs  kg_extraction_test.rs  kg_extractor_tests.rs  mcp_integration.rs  mcp_protocol.rs  mcp_test_out.json  mcp_test_runner.py  relationship_smoke.rs  simple_test.json  simple_test.sh  test_agent_job_status.rs  test_append_behavior.rs  test_detailed_mcp.sh  test_mcp.sh  test_mcp_comprehensive.sh  test_scalpel_operations.rs  test_search.sh  test_search_mcp.json  test_simple.sh  test_simplified_output.sh  test_stdio_persistence.sh  test_wander.rs  test_with_data.sh  tool_schemas.rs  workspace_resolution.rs
tmp-home/: .claude.json  .claude.json.backup
(+344 files in other folders)
