[package]
name = "surreal-mind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1.5"
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1", features = ["metal"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
dotenvy = "0.15"
hf-hub = "0.4.3"
# Bounded in-memory cache
lru = "0.12"
once_cell = "1.19"
regex = "1.10"
# Embedding support
reqwest = { version = "0.12", features = ["json"] }
# RMCP is the foundation - not optional
rmcp = { version = "0.6.1", features = ["macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
strsim = "0.11"
# SurrealDB with WebSocket client
surrealdb = { version = "2.0", features = ["protocol-ws"] }
thiserror = "1.0"
tokenizers = "0.22.0"
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
# Enables DB-backed integration tests (not enabled by default)
db_integration = []
default = []
