[package]
name = "surreal-mind"
version = "0.7.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
# HTTP transport dependencies
axum = { version = "0.7", default-features = false, features = [
  "http1",
  "json",
  "tokio",
] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
# TUI dashboard
ratatui = { version = "0.30.0", features = ["all-widgets", "crossterm"] }
lru = "0.12"
once_cell = "1.19"
dotenvy = "0.15"
dirs = "5.0"


regex = "1.10"
# Embedding support
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
# RMCP is the foundation - not optional
rmcp = { version = "0.12.0", features = [
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "transport-worker",
] }
rmp-serde = "1.3"
# Migration dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For query parameter parsing in HTTP auth
serde_qs = "0.13"
sha1 = "0.10"
strsim = "0.11"
# SurrealDB with WebSocket client
surrealdb = { version = "2.0", features = ["protocol-ws"] }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
futures-util = "0.3"
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# Enables DB-backed integration tests (not enabled by default)
db_integration = []
